force-app/main/default/objects/Field_Checklist__c/Field_Checklist__c.object-meta.xml
<CustomObject>
    <label>Field Checklist</label>
    <nameField>
        <displayFormat>FC-{000000}</displayFormat>
        <label>Field Checklist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>