force-app/main/default/objects/Field_Checklist__c/fields/Checklist_Type__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Type__c</fullName>
    <label>Checklist Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle Checklist</fullName>
            </value>
            <value>
                <fullName>Loaded Checklist</fullName>
            </value>
            <value>
                <fullName>Arrival Checklist</fullName>
            </value>
            <value>
                <fullName>Active Job Checklist</fullName>
            </value>
            <value>
                <fullName>Closeout Checklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>