force-app/main/default/objects/Field_Checklist__c/fields/Offline_Local_Id__c.field-meta.xml
<CustomField>
    <fullName>Offline_Local_Id__c</fullName>
    <label>Offline Local Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>