force-app/main/default/objects/Field_Checklist__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Field Checklists</relationshipLabel>
    <relationshipName>Field_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>