force-app/main/default/objects/Field_Checklist__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Field Checklists</relationshipLabel>
    <relationshipName>ServiceResourceFieldChecklists</relationshipName>
    <type>Lookup</type>
</CustomField>