force-app/main/default/objects/Field_Checklist__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Field Checklists</relationshipLabel>
    <relationshipName>Field_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>